--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 28
     buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.example.practiceform"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -44,4 +44,6 @@ dependencies {
     //Fragment
     implementation 'tech.thdev.support:base:1.0.1'
     implementation 'androidx.fragment:fragment-ktx:1.2.0'
+    //RecyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
